# multilspy-xcode-build-server

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_usage.py
src/multispy_xcode_build_server/: __init__.py  initialize_params.json  server.py
tests/: test_server.py
